# platform

./: .editorconfig  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  PELORUS_IMPLEMENTATION_PLAN.md  README.md
.cargo/: config.toml
dbc-rs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  rust-toolchain.toml
dbc-rs/.github/workflows/: benchmark-compare.yml  dbc-rs.yml
dbc-rs/src/compat/: mod.rs
dbc-rs/src/error/: impls.rs
mdf4-rs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
mdf4-rs/.github/workflows/: mdf4-rs.yml
pelorus-bounded/: Cargo.toml  README.md
pelorus-bounded/src/: lib.rs
pelorus-core/: ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  build.rs
pelorus-core-sim/: Cargo.toml  README.md
pelorus-core-sim/src/: addressing.rs  lib.rs  main.rs  power.rs  transport.rs
pelorus-core/data/: dcid_reference.toml
pelorus-core/src/: correlation.rs  lib.rs  semantics.rs
pelorus-core/src/addressing/: address_claim_config.rs  address_claim_engine.rs  address_claim_frame.rs  address_command_frame.rs  claim_action.rs  claim_state.rs  listen_timing.rs  mod.rs  name.rs  name_builder.rs
pelorus-core/src/bus/: can_fd_bus.rs  can_fd_frame.rs  can_fd_max_data.rs  mod.rs  sim_bus_error.rs  sim_bus_frame_cap.rs  sim_port.rs  simulated_bus.rs
pelorus-core/src/canbus/: decoder.rs
pelorus-core/src/dcid/: mapping.rs  mod.rs  protocol.rs  registry.rs  wire.rs
pelorus-core/src/dcid/mapping/: mod.rs  reference.rs
pelorus-core/src/ownship/: mod.rs  snapshot.rs  state.rs
pelorus-core/src/power/: cluster_nm_state.rs  functional_groups.rs  mod.rs  network_management_config.rs  network_management_engine.rs  network_management_frame.rs  nm_action.rs  nm_timing.rs  nm_wire_state.rs  power_state.rs  wake_up_frame.rs
pelorus-core/src/transport/: abort_control.rs  broadcast_open_control.rs  close_control.rs  control_opcode.rs  crc32.rs  ingress_broadcast_session.rs  ingress_result.rs  mod.rs  multiframe_control.rs  multiframe_data.rs  open_ack_control.rs  open_control.rs  open_nak_control.rs  session_limits.rs  transport_action.rs  transport_reason_code.rs  transport_status_code.rs  window_control.rs
pelorus-core/src/vdr/: channel_map.rs  recorder.rs
pelorus-core/src/wire/: dc_id.rs  dc_ids.rs  identifier.rs  mod.rs  pack_identifier.rs
pelorus-core/tests/: address_claiming.rs  dcid_mapping.rs  power_nm.rs  transport_broadcast.rs  vdr_channel_naming.rs
pelorus-inspector/: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE-APACHE  LICENSE-COMMERCIAL  LICENSE-MIT  LICENSING.md  README.md  build.rs  eslint.config.js  package-lock.json  package.json  tauri.conf.json  tsconfig.json
pelorus-inspector/capabilities/: default.json
pelorus-inspector/examples/: README.md  sample.vspec
pelorus-inspector/frontend/: index.html  main.ts
pelorus-inspector/frontend/lib/: config.test.ts  config.ts  events.ts  filter.ts  index.ts  inspector-lab-extensions.ts  ipc.ts  pelorus-inspector.test.ts  pelorus-inspector.ts  pelorus-panels.ts  state.test.ts  state.ts  store.ts  types.ts
pelorus-inspector/frontend/lib/api/: mock-api.ts  tauri-api.test.ts  tauri-api.ts
pelorus-inspector/frontend/lib/can-config/: can-config-forms.ts  can-config.css  can-config.ts  index.ts  types.ts
pelorus-inspector/frontend/lib/components/dbc-editor/: attributes-editor.ts  dbc-editor.ts  index.ts  message-editor.ts  nodes-editor.ts  signal-editor.ts  signals-table.ts  value-descriptions-editor.ts
pelorus-inspector/frontend/lib/components/live-viewer/: live-viewer.ts
pelorus-inspector/frontend/lib/components/mdf4-inspector/: mdf4-inspector.ts
pelorus-inspector/frontend/lib/decoder/: index.ts  message-decoder.ts  types.ts
pelorus-inspector/frontend/lib/editors/: form-helpers.ts  index.ts  lab-addon.css  pelorus-panel-base.ts  rhai-editor.ts  rhai-script-editor.ts  styles.ts
pelorus-inspector/frontend/lib/simulator/: index.ts  script-api.ts  script-templates.ts  sim-script-editor.ts  traffic-simulator.ts  types.ts
pelorus-inspector/frontend/lib/storage/: index.ts  storage-file-list.ts  storage-panel.ts  storage-toolbar.ts  types.ts
pelorus-inspector/frontend/lib/workflow/: index.ts  node-handlers.ts  node-types.ts  types.ts  workflow-canvas.ts  workflow-editor.ts  workflow-events.ts  workflow-render.ts  workflow-runtime-events.ts  workflow-script-api.ts  workflow-script-editor.ts  workflow-styles.css  workflow-zoom.ts
pelorus-inspector/frontend/styles/: pelorus-inspector.css
pelorus-inspector/icons/: generate_icons.py
pelorus-inspector/src/: analysis.rs  can_iface.rs  config.rs  decode.rs  dto.rs  lib.rs  live_capture.rs  main.rs  state.rs
pelorus-inspector/src/agent/: mod.rs  ops.rs
pelorus-inspector/src/commands/: capabilities.rs  capture.rs  dbc.rs  filter.rs  init.rs  mdf.rs  mod.rs  vss.rs
pelorus-inspector/src/simulator/: engine.rs  mod.rs  state.rs  types.rs
pelorus-inspector/src/simulator/commands/: commands_linux.inc.rs  commands_stub.inc.rs  mod.rs
pelorus-inspector/src/storage/: commands.rs  mod.rs  schema.sql  state.rs  types.rs
pelorus-inspector/src/vss/: dto_convert.rs  mod.rs
pelorus-inspector/src/workflow/: commands.rs  executors.rs  mod.rs  runtime.rs  script_engine.rs  state.rs  types.rs
pelorus-inspector/tests/: mdf4_integration.rs
pelorus-m7/: Cargo.toml  README.md
pelorus-m7/src/: lib.rs
pelorus-platform/: ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md
pelorus-platform/src/: lib.rs  semantics.rs
pelorus-platform/src/canbus/: frame_log.rs  mod.rs
pelorus-platform/src/ownship/: snapshot.rs
pelorus-platform/src/vdr/: channel_map.rs  mod.rs
pelorus-platform/tests/: dcid_mapping.rs  vdr_channel_naming.rs
pelorus-semantics/: Cargo.toml  README.md
pelorus-semantics/src/: correlation.rs  lib.rs
pelorus-state/: Cargo.toml  README.md
pelorus-state/src/: lib.rs
pelorus-stream/: Cargo.toml  README.md
pelorus-stream/src/: correlation.rs  datagram_header.rs  lib.rs  telemetry.rs
pelorus-vdr/: Cargo.toml  README.md
(+18 files in other folders)
