[workspace]
resolver = "2"
members = [
  "pelorus-bounded",
  "dbc-rs",
  "mdf4-rs",
  "pelorus-inspector",
  "pelorus-stream",
  "pelorus-state",
  "pelorus-core",
  "pelorus-m7",
]
default-members = ["pelorus-core"]

# Shared dependency versions (use `dep = { workspace = true }` in member crates).
[workspace.dependencies]
embedded-can = "0.4.1"
serde = { version = "1.0", default-features = false }
serde_json = "1.0"

# Safe Rust only for every member that sets `[lints] workspace = true`.
[workspace.lints.rust]
unsafe_code = "forbid"

# Rust 1.90 clippy is stricter here; mass reformatting gains little for this workspace.
[workspace.lints.clippy]
# Nested `if`/`let` chains stay readable in parsers and GUI helpers.
collapsible_if = "allow"
uninlined_format_args = "allow"
