[package]
name = "mdf4-rs"
version = "0.3.1"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Pelorus Marine contributors <https://github.com/pelorus-marine>"]
repository = "https://github.com/pelorus-marine/platform"
homepage = "https://github.com/pelorus-marine/platform/tree/main/mdf4-rs"
rust-version = "1.90.0"
readme = "README.md"
description = "mdf4-rs is a Rust library for working with Measurement Data Format (ASAM MDF4) files."
documentation = "https://docs.rs/mdf4-rs"
keywords = ["mdf4", "can", "dbc", "automotive", "no_std"]
categories = ["parsing", "embedded"]
exclude = [".github/", "examples/", "tests/", "benches/"]

[features]
default = ["std", "can", "dbc"]
std = ["alloc", "serde", "serde_json", "dbc-rs?/std"]
alloc = []
serde = ["dep:serde"]
can = ["dep:embedded-can"]
dbc = ["dep:dbc-rs", "alloc"]
compression = ["dep:miniz_oxide", "alloc"]

[dependencies]

[dependencies.serde]
workspace = true
default-features = false
features = ["derive", "alloc"]
optional = true

[dependencies.serde_json]
workspace = true
optional = true

[dependencies.embedded-can]
workspace = true
optional = true

[dependencies.dbc-rs]
path = "../dbc-rs"
version = "0.5.1"
default-features = false
features = ["alloc"]
optional = true

[dependencies.miniz_oxide]
version = "0.9"
default-features = false
features = ["with-alloc"]
optional = true

[dev-dependencies]

[dev-dependencies.serde]
workspace = true
features = ["derive"]

[dev-dependencies.embedded-can]
workspace = true

[dev-dependencies.dbc-rs]
path = "../dbc-rs"
version = "0.5.1"
default-features = false
features = ["std"]

[dev-dependencies.miniz_oxide]
version = "0.9"

[[bench]]
name = "index_benchmark"
harness = false

[lints]
workspace = true
