[package]
name = "pelorus-bounded"
version = "0.1.1"
edition = "2024"
rust-version = "1.88.0"
license = "MIT OR Apache-2.0"
description = "Bounded Vec, String, and map types abstracting alloc vs heapless"
repository = "https://github.com/pelorus-marine/platform"
readme = "README.md"

[dependencies.heapless]
version = "0.9.2"
optional = true

[features]
default = ["alloc"]
alloc = []
heapless = ["dep:heapless"]

[lints]
workspace = true
