[package]
name = "pelorus-core"
version = "0.1.1"
edition = "2024"
rust-version = "1.88.0"
license = "MIT OR Apache-2.0"
description = "Pelorus Core integration — CAN FD, DCID, VDR, ECDIS own-ship (Pelorus-first; in-tree dbc-rs / mdf4-rs)"
readme = "README.md"
repository = "https://github.com/pelorus-marine/platform"

[dependencies]
dbc-rs = { path = "../dbc-rs", version = "0.5.1", optional = true, default-features = false }
mdf4-rs = { path = "../mdf4-rs", version = "0.3.1", optional = true, default-features = false }
embedded-can = { workspace = true, optional = true }

[features]
default = ["std", "canbus", "vdr"]
std = ["dbc-rs?/std", "mdf4-rs?/std"]
semantics = []
alloc = ["dbc-rs?/alloc"]
canbus = ["dep:dbc-rs", "dep:embedded-can", "dbc-rs/embedded-can", "dbc-rs/alloc"]
canbus_heapless = ["dep:dbc-rs", "dep:embedded-can", "dbc-rs/embedded-can", "dbc-rs/heapless"]
vdr = ["dep:mdf4-rs", "dep:dbc-rs", "std", "mdf4-rs/std", "mdf4-rs/dbc", "dbc-rs/std"]
hw_test = []

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
