[package]
name = "pelorus-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.90.0"
license = "MIT OR Apache-2.0"
authors = ["Pelorus Marine contributors <https://github.com/pelorus-marine>"]
description = "Pelorus Core building blocks — embedded-first protocol primitives (CAN FD, addressing, …)"
readme = "README.md"
repository = "https://github.com/pelorus-marine/platform"

[dependencies]
pelorus-bounded = { path = "../pelorus-bounded", version = "0.1.1", default-features = false, optional = true }

[features]
default = ["alloc"]
alloc = ["dep:pelorus-bounded", "pelorus-bounded/alloc"]
heapless = ["dep:pelorus-bounded", "pelorus-bounded/heapless"]
# In-memory CAN medium for `pelorus-core-sim` and gated tests (requires `alloc`).
sim = ["alloc"]

[package.metadata.docs.rs]
all-features = true

[[test]]
name = "address_claiming"
required-features = ["sim"]

[[test]]
name = "power_nm"
required-features = ["alloc"]

[[test]]
name = "transport_broadcast"
required-features = ["alloc"]

[lints]
workspace = true
