[package]
name = "pelorus-m7"
version = "0.0.1"
edition = "2024"
rust-version = "1.88.0"
license = "MIT OR Apache-2.0"
authors = ["Pelorus Marine contributors <https://github.com/pelorus-marine>"]
description = "Pelorus Cortex-M7 firmware scaffold — CAN FD decode (Phase 2); never enables pelorus-core/vdr."
readme = "README.md"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
pelorus-core = { path = "../pelorus-core", version = "0.1.1", default-features = false, features = ["canbus_heapless"] }

[lints]
workspace = true
