[package]
name = "pelorus-state"
version = "0.1.1"
edition = "2024"
rust-version = "1.90.0"
license = "MIT OR Apache-2.0"
authors = ["Pelorus Marine contributors <https://github.com/pelorus-marine>"]
description = "Pelorus State subsystem — fusion and policy scaffold over Core + Stream"
readme = "README.md"
repository = "https://github.com/pelorus-marine/platform"

[dependencies]
pelorus-stream = { path = "../pelorus-stream", version = "0.1.1", optional = true, default-features = false }

[features]
default = ["std", "stream"]
std = ["pelorus-stream?/std"]
stream = ["dep:pelorus-stream"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
