[package]
name = "pelorus-stream"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Pelorus Stream subsystem — Ethernet / non-safety-critical transport"
readme = "README.md"
repository = "https://github.com/pelorus-marine/pelorus-marine"

[features]
default = ["std"]
std = []
alloc = []

[dependencies]
pelorus-semantics = { path = "../pelorus-semantics", default-features = false }

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
