[package]
name = "pelorus-stream"
version = "0.1.1"
edition = "2024"
rust-version = "1.90.0"
license = "MIT OR Apache-2.0"
authors = ["Pelorus Marine contributors <https://github.com/pelorus-marine>"]
description = "Pelorus Stream subsystem — Ethernet / non-safety-critical transport"
readme = "README.md"
repository = "https://github.com/pelorus-marine/platform"

[features]
default = ["std"]
std = []
alloc = []

[dependencies]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
